Working readGroupTransaction